# pointcloud-fusion

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: config.txt  pointcloud_fusion.yaml
dependence/ros-keyboard/: package.xml
dependence/ros-keyboard/src/: keyboard.h  main.cpp
include/pointcloud_fusion/: PreprocessUtils.h  data_io.h  icp.h  mylog.h  point_cloud_registraion.h  type.h  util.h  visual_odometry.h
launch/: dataloger.launch  multi_pointcloud.launch  pointcloud_fusion.launch
mapping_wo_ros/: CMakeLists.txt  result copy.txt  result.g2o  result.txt
mapping_wo_ros/cfg/: config.txt
mapping_wo_ros/cmake_modules/: FindG2O.cmake
mapping_wo_ros/config/: config.txt
mapping_wo_ros/include/: data_io.h  icp.h  optimization.h  pose_estimation_2d2d.cpp  type.h  util.h  visual_odometry.h
mapping_wo_ros/src/: generate_vocab.cpp  main.cpp  mapping.cpp  optimization.cpp  optimizer.cpp  optimizier.cpp  point_cloud_filtering.cpp  test.cpp  tuning.cpp
src/: dataloger.cpp  main.cpp  multi_color_pointcloud.cpp  multi_pointcloud.cpp  mylog.cpp  optimization.cpp  single_color_pointcloud.cpp
