<?xml version="1.0"?>
<package>
  <name>pointcloud_fusion</name>
  <url>https://github.com/HoEmpire/pointcloud-fusion.git</url>
  <description>
     ROS package to fuse pointcloud of livox lidar and camera
  </description>
  <version>0.0.1</version>
  <maintainer email="refer_to_repo@github.com">Yuxiang Peng</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>pcl_ros</build_depend>


  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
